--- a/peakrdl/python/templates/addrmap.py.jinja
+++ b/peakrdl/python/templates/addrmap.py.jinja
@@ -12,8 +12,8 @@ from .peakrdl_python_types import RegReadOnly, RegWriteOnly, RegReadWrite
 from .peakrdl_python_types import Field, FieldReadOnly, FieldWriteOnly, FieldReadWrite
 from .peakrdl_python_types import read_callback_type, write_callback_type
 
-{% from 'addrmap_field.py.jinga' import field_class with context %}
-{% from 'addrmap_register.py.jinga' import register_class with context %}
+{% from 'addrmap_field.py.jinja' import field_class with context %}
+{% from 'addrmap_register.py.jinja' import register_class with context %}
 
 
 
