--- a/peakrdl/python/templates/addrmap.py.jinja
+++ b/peakrdl/python/templates/addrmap.py.jinja
@@ -5,7 +5,7 @@ This code was generated from the PeakRDL-python package
 """
 {% if top_node.uses_enum %}from enum import IntEnum, unique{% endif %}
 from typing import Tuple, NoReturn
-from typing import Iterable
+from collections.abc import Iterable
 
 from .peakrdl_python_types import AddressMap, Reg, RegFile
 from .peakrdl_python_types import RegReadOnly, RegWriteOnly, RegReadWrite
