--- a/peakrdl/python/templates/addrmap_field.py.jinja
+++ b/peakrdl/python/templates/addrmap_field.py.jinja
@@ -19,13 +19,12 @@ class {{get_fully_qualified_type_name(node)}}_cls(FieldWriteOnly):
     __slots__ = []
 
     {%- if 'encode' in node.list_properties() %}
-    @classmethod
     @property
-    def enum_cls(cls):
+    def enum_cls(self):
         """
         The enumeration class for this field
         """
-        return cls.__enum_cls
+        return self.__enum_cls
 
         {%- if node.is_sw_readable %}
     def decode_read_value(self, reg_value: int) -> {{get_fully_qualified_enum_type(node.get_property('encode'), top_node.parent)}}_enumcls:
