--- a/peakrdl/python/templates/addrmap.py.jinja
+++ b/peakrdl/python/templates/addrmap.py.jinja
@@ -9,7 +9,7 @@ from typing import Iterable
 
 from .peakrdl_python_types import AddressMap, Reg, RegFile
 from .peakrdl_python_types import RegReadOnly, RegWriteOnly, RegReadWrite
-from .peakrdl_python_types import Field, FieldReadOnly, FieldWriteOnly, FieldReadWrite
+from .peakrdl_python_types import Field, FieldReadOnly, FieldWriteOnly, FieldReadWrite, FieldSizeProps
 from .peakrdl_python_types import read_callback_type, write_callback_type
 
 {% from 'addrmap_field.py.jinja' import field_class with context %}
